@@ -23,6 +23,7 @@ date Version 3.00.50 (RC3)
 * On Windows, Ctrl+C did not copy text from code editor when an object was not selected.
 * FS#241 - "<wx/statbox.h> not included in generated header."
 * Removed minimum size from code windows so the tabs and scrollbars no longer disappear as the window is shrinking.
+* FS#242 - "wxFB does not respect current working directory."
 
 09/06/2007 Version 3.00.49 (RC2)
 * wxStdDialogButtonSizer events now Connect() to the button, instead of the parent.
